nuevos grids cartera clientes

--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -94,7 +94,7 @@
                 </div>
                 <br><br>
 
-                <dx-data-grid  #gridCartera id="gridContainer2" [dataSource]="carteraClientes" [height]="700"[showBorders]="true" [columnAutoWidth]="true"
+                <dx-data-grid  #gridCartera id="gridContainer2" [dataSource]="carteraClientes" [height]="500"[showBorders]="true" [columnAutoWidth]="true"
                 (onRowPrepared)="onRowPreparedCC($event)" (onCellPrepared)="onCellPreparedCC($event)">
 
                   <dxo-scrolling mode="virtual" rowRenderingMode="virtual"></dxo-scrolling>
@@ -104,22 +104,59 @@
                     
                   <dxi-column caption="{{printValue+' - '+ printPeriodo}}">
                     <dxi-column dataField="cliente" caption="Nombre de cliente"></dxi-column>
+                    <dxi-column dataField="sinCartera" caption="Sin Carta Cobro" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="corriente" caption="Corriente" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="per1a30" caption="1 A 30" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="per31a60" caption="31 A 60" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="per61a90" caption="61 A 90" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="permayor90" caption="MAS 90" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="total" caption="Total" cssClass="styletotal" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="" caption="" [width]="20"></dxi-column>
                   </dxi-column>
 
                   <dxo-summary>
                     <dxi-total-item column="cliente" [customizeText]="customizeDate"></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                  </dxo-summary>
+
+                </dx-data-grid>
+                <br><br>
+
+                <dx-data-grid  #gridSinCart id="gridContainer3" [dataSource]="sinCartera" [height]="500"[showBorders]="true" [columnAutoWidth]="true"
+                (onRowPrepared)="onRowPreparedSinC($event)" (onCellPrepared)="onCellPreparedSinC($event)">
+
+                  <dxo-scrolling mode="virtual" rowRenderingMode="virtual"></dxo-scrolling>
+                  <dxo-paging [pageSize]="100"></dxo-paging>
+                  <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
+                  <dxo-export [enabled]="true" fileName="CARTERA CLIENTES" [customizeExcelCell]="customizeCAER"></dxo-export>
+                    
+                  <dxi-column caption="{{printValue+' - '+ printPeriodo}}">
+
+                    <!-- <dxi-column dataField="sinCartera" caption="Sin cartera" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="corriente" caption="Corriente" [format]="formatMoneda"></dxi-column> -->
+                    <dxi-column dataField="cliente" caption="Nombre de cliente"></dxi-column>
+                    <dxi-column dataField="per1a30" caption="1 A 30" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="per31a60" caption="31 A 60" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="per61a90" caption="61 A 90" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="permayor90" caption="MAS 90" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="sinCartera" caption="Total" cssClass="styletotal" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="" caption="" [width]="20"></dxi-column>
+                  </dxi-column>
+
+                  <dxo-summary>
+                    <!-- <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item> -->
+                    <dxi-total-item column="cliente" [customizeText]="CustomizeSinCart"></dxi-total-item>
+                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                   </dxo-summary>
 
                 </dx-data-grid>
@@ -163,7 +200,7 @@
 
                 <br><br>
     <!--================================================CARTERA INTER ====================================================================================-->
-                <dx-data-grid  #gridInter id="gridContainer2" [dataSource]="carteraMI" [height]="700"[showBorders]="true" [columnAutoWidth]="true"
+                <dx-data-grid  #gridInter id="gridContainer4" [dataSource]="carteraMI" [height]="500"[showBorders]="true" [columnAutoWidth]="true"
                 (onRowPrepared)="onRowPreparedCMI($event)" (onCellPrepared)="onCellPreparedCMI($event)">
 
                   <dxo-scrolling mode="virtual" rowRenderingMode="virtual"></dxo-scrolling>
@@ -174,17 +211,21 @@
                   <dxi-column caption="{{printValue+' - '+ printPeriodo}}">
                     <dxi-column dataField="cliente" caption="" [groupIndex]="0"></dxi-column>
                     <dxi-column dataField="intercompania" caption="Intercompañia"></dxi-column>
+                    <dxi-column dataField="sinCartera" caption="Sin Carta Cobro" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="corriente" caption="Corriente" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="per1a30" caption="1 A 30" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="per31a60" caption="31 A 60" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="per61a90" caption="61 A 90" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="permayor90" caption="MAS 90" [format]="formatMoneda"></dxi-column>
                     <dxi-column dataField="total" caption="Total" cssClass="styletotal" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="" caption="" [width]="20"></dxi-column>
+                    <!-- <dxi-column dataField="" caption="" [width]="20"></dxi-column> -->
                   </dxi-column>
 
                   <dxo-summary>
                     <dxi-total-item column="cliente"></dxi-total-item>
                     <dxi-total-item column="intercompania" [customizeText]="customizeIC"></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
                     <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
@@ -194,10 +235,46 @@
                   </dxo-summary>
 
                 </dx-data-grid>
-                
                 <br><br>
+
+                <dx-data-grid  #gridInerSinCart id="gridContainer4" [dataSource]="carteraInterSinC" [height]="500"[showBorders]="true" [columnAutoWidth]="true"
+                (onRowPrepared)="onRowPreparedISC($event)" (onCellPrepared)="onCellPreparedISC($event)">
+
+                  <dxo-scrolling mode="virtual" rowRenderingMode="virtual"></dxo-scrolling>
+                  <dxo-paging [pageSize]="100"></dxo-paging>
+                  <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
+                  <dxo-export [enabled]="true" fileName="CARTERA Inter Compañia" [customizeExcelCell]="customizeCAER"></dxo-export>
+                    
+                  <dxi-column caption="{{printValue+' - '+ printPeriodo}}">
+                    <dxi-column dataField="cliente" caption="" [groupIndex]="0"></dxi-column>
+                    <dxi-column dataField="intercompania" caption="Nombre de cliente"></dxi-column>
+                    <!-- <dxi-column dataField="intercompania" caption="Intercompañia"></dxi-column>
+                    <dxi-column dataField="sinCartera" caption="Sin cartera" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="corriente" caption="Corriente" [format]="formatMoneda"></dxi-column> -->
+                    <dxi-column dataField="per1a30" caption="1 A 30" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="per31a60" caption="31 A 60" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="per61a90" caption="61 A 90" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="permayor90" caption="MAS 90" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="sinCartera" caption="Total" cssClass="styletotal" [format]="formatMoneda"></dxi-column>
+                    <dxi-column dataField="" caption="" [width]="20"></dxi-column>
+                    <!-- <dxi-column dataField="" caption="" [width]="20"></dxi-column> -->
+                  </dxi-column>
+
+                  <dxo-summary>
+                    <dxi-total-item column="cliente"></dxi-total-item>
+                     <dxi-total-item column="intercompania" [customizeText]="customizeISC"></dxi-total-item>
+                    <!--<dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="corriente" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item> -->
+                    <dxi-total-item column="per1a30" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="per31a60" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="per61a90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="permayor90" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                    <dxi-total-item column="sinCartera" summaryType="sum" displayFormat="{0}" [valueFormat]="separator" ></dxi-total-item>
+                  </dxo-summary>
+
+                </dx-data-grid>
     <!--=========================================TOTAL CARTERA CIENTE Y CARTERA INTER======================================================================-->
-                <dx-data-grid  #gridCliCartInt id="gridContainer3" class="grid3" [dataSource]="myTotal" [showBorders]="true" [height]="120" [columnAutoWidth]="true"
+                <dx-data-grid  #gridCliCartInt id="gridContainer5" class="grid3" [dataSource]="myTotal" [showBorders]="true" [height]="120" [columnAutoWidth]="true"
                 (onRowPrepared)="onRowPreparedCCI($event)" (onCellPrepared)="onCellPreparedCCI($event)">
 
                   <dxo-scrolling showScrollbar="never"></dxo-scrolling>
