--- a/src/app/pages/carteraClientes/carteraClientes.component.html
+++ b/src/app/pages/carteraClientes/carteraClientes.component.html
@@ -332,7 +332,8 @@
                   <dxi-column dataField="total" caption="Total" [format]="separator" width="100%" alignment="left"></dxi-column>
               </dx-data-grid>
 
-              <dx-data-grid  #grid2 id="gridContainer2" [dataSource]="avance2" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false">
+              <dx-data-grid  #grid2 id="gridContainer2" [dataSource]="avance2" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
+              (onRowPrepared)="onRowPreparedA($event)">
                   <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
                   <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
                   <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
@@ -344,7 +345,8 @@
                   <dxi-column dataField="total" format="percent" width="100%" alignment="left"></dxi-column>
               </dx-data-grid>
 
-              <dx-data-grid  #grid3 id="gridContainer3" [dataSource]="avance3" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false">
+              <dx-data-grid  #grid3 id="gridContainer3" [dataSource]="avance3" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
+              (onRowPrepared)="onRowPreparedAT($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
@@ -356,7 +358,8 @@
                 <dxi-column dataField="total"  format="percent" width="100%" alignment="left"></dxi-column>
               </dx-data-grid>
 
-              <dx-data-grid  #grid4 id="gridContainer4" [dataSource]="avance4" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false">
+              <dx-data-grid  #grid4 id="gridContainer4" [dataSource]="avance4" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
+              (onRowPrepared)="onRowPreparedA($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCartera1a30" [format]="separator" width="100%" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCarteraMas30" [format]="separator" width="100%" alignment="left"></dxi-column>
@@ -368,7 +371,8 @@
                 <dxi-column dataField="total" [format]="separator" width="100%" alignment="left"></dxi-column>
               </dx-data-grid>
 
-              <dx-data-grid  #grid5 id="gridContainer5" [dataSource]="avance5" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false">
+              <dx-data-grid  #grid5 id="gridContainer5" [dataSource]="avance5" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
+              (onRowPrepared)="onRowPreparedA($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
@@ -380,7 +384,8 @@
                 <dxi-column dataField="total"  format="percent" width="100%" alignment="left"></dxi-column>
               </dx-data-grid>
 
-              <dx-data-grid  #grid6 id="gridContainer6" [dataSource]="avance6" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false">
+              <dx-data-grid  #grid6 id="gridContainer6" [dataSource]="avance6" [height]="40"[showBorders]="true" [columnAutoWidth]="true" [showColumnHeaders]="false"
+              (onRowPrepared)="onRowPreparedAT($event)">
                 <dxi-column dataField="concepto" [width]="200" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCartera1a30" format="percent" width="100%" alignment="left"></dxi-column>
                 <dxi-column dataField="sinCarteraMas30" format="percent" width="100%" alignment="left"></dxi-column>
